--- a/.github/workflows/sms-alert.yml
+++ b/.github/workflows/sms-alert.yml
@@ -1,4 +1,4 @@
-name: Public-Repo-SMS-Alert
+name: sms-alert
 on: public
 
 jobs:
@@ -7,7 +7,6 @@ jobs:
     steps: 
       - name: main-step
         uses: bitoiu/repo-visibility-alert-action@master
-        secrets: []
         env:
           ACCOUNT_SID: ${{ secrets.ACCOUNT_SID }}
           AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
